# AutoInvoice2XLSX-2.0

./: .coverage.MINIJOE.pid20019.XvPN0QLx  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CARICOM_COMPREHENSIVE_SKILL.md  PIPELINE_SPECIFICATION.md  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vitest.config.ts
.claude/: magic-ok-approvals.draft.yaml  magic-ok-approvals.yaml  settings.json  wave1_agent_brief.md
.husky/: commit-msg  pre-commit
app/: electron-builder.json  index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
config/: agent_system_prompt.md  api_settings.yaml  cache_settings.yaml  columns.yaml  country_codes.yaml  document_types.json  file_paths.yaml  financial_constants.yaml  grouping.yaml  hs_categories.yaml  hs_structure.yaml  invoice_formats.yaml  issue_types.yaml  library_enums.yaml  ocr_corrections.yaml  office_locations.yaml  patterns.yaml  pipeline.yaml  repo_layout.yaml  shipment_rules.yaml  validation_tolerances.yaml  variance_analysis_strategies.yaml  xlsx_labels.yaml
data/: bm_product_matches.json  bm_product_urls.json  item_aliases.json  send_history.json  suppliers.json
docs/: V2_MIGRATION_PLAN.md  V2_REQUIREMENTS.md
pipeline/: _diag.py  apply_fixes.py  asycuda_xml_parser.py  bl_parser.py  bl_xlsx_generator.py  checklist_fixer.py  checklist_llm_fixers.py  classification_db.py  classification_verifier.py  classifier.py  classifier_batch.py  classify_pdfs.py  code_validator.py  config_loader.py  consignee_grouping.py  consignee_resolver.py  costing_sheet_generator.py  extract_assessed_codes.py  fix_regression_declarations.py  format_parser.py  format_registry.py  grouping_engine.py  import_asycuda_results.py  item_parser.py  learning.py  multi_ocr.py  ocr_number_normalizer.py  patch_duty_estimation.py  pdf_extractor.py  pdf_splitter.py  perf_log.py  pipeline_runner.py  po_matcher.py  process_bl.py  product_research.py  proposed_fixes.py  repo_layout.py  requirements.txt  review_candidates.py  run.py  (+14 more)
(+1015 files in other folders)
